--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.0.7",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-geosearch": "^3.3.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
